Fix navbar logo overflowing outside header

--- a/css/style.css
+++ b/css/style.css
@@ -1142,11 +1142,12 @@ button {
 
 .navbar-logo {
   display: block;
-  width: 128px;
+  height: 36px;
 }
 
 .navbar-logo-img {
-  width: 100%;
+  height: 100%;
+  width: auto;
   display: block;
   border-radius: 100px;
 }
